testing/sqltests/tests/snapshots/multi_index_dml__update-multi-index-and-access-shape.snap
---
source: multi_index_dml.sqltest
expression: UPDATE t SET bar = bar + 100 WHERE i1 = 5 AND i2 = 6;
info:
  statement_type: UPDATE
  tables:
  - t
  setup_blocks:
  - multi_index_dml_schema
  database: ':memory:'
---
QUERY PLAN
`--MULTI-INDEX AND t (t_i1, t_i2)
